[v1.0] Build, lecture et ecriture ok