@@ -15,6 +15,7 @@ import model.square.SquareType;
 import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MapBuilder {
 
@@ -29,7 +30,7 @@ public class MapBuilder {
     public Map readMap(){
         try {
             BufferedReader reader = new BufferedReader(new FileReader(fileName));
-            List<String> linesInFile = reader.lines().toList();
+            List<String> linesInFile = reader.lines().collect(Collectors.toList());
 
             createMap(linesInFile);
             createElements(linesInFile);
